--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <div id="title">ETCH-A-SKETCH</div>
+    <div class="inputElements">
+        <label for="gridSize">Grid size:</label>
+        <input type="text" id="gridSize" name="gridSize">
+        <button id="inputButton">Enter</button>
+    </div>
     <div class="container"></div>
 </body>
 </html>
